--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "toolkitcss",
   "version": "1.0.0",
   "description": "A CSS toolkit class compiled by sass.",
-  "main": "index.js",
+  "main": "dist/index.css",
+  "style": "dist/index.css",
   "scripts": {
+    "build": "cross-env NODE_ENV=production gulp",
+    "dev": "cross-env NODE_ENV=development gulp",
     "release": "npm publish --access=public"
   },
   "repository": {
@@ -27,6 +30,13 @@
   },
   "homepage": "https://github.com/yisibell/toolkitcss#readme",
   "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0"
+    "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.49.9"
   }
 }
