feat!: using vite and rollup, add docs site

--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "toolkitcss",
-  "version": "2.0.0",
+  "version": "1.2.0",
   "description": "A CSS toolkit class compiled by sass.",
   "type": "module",
   "main": "dist/index.css",
   "style": "dist/index.css",
+  "exports": {
+    "./index.css": "./dist/index.css",
+    "./dist/index.css": "./dist/index.css"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/yisibell/toolkitcss"
   },
   "files": [
-    "lib",
+    "dist",
     "src/lib"
   ],
   "keywords": [
@@ -26,10 +30,9 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build:app": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
-    "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
@@ -42,6 +45,7 @@
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.3",
     "@types/node": "^18.18.5",
+    "@types/prismjs": "^1.26.3",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -50,7 +54,7 @@
     "changelogen": "^0.5.5",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "demoify": "^1.3.0",
+    "demoify": "^2.0.1",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
